# work-discipline-data-structure

./: .gitignore  README.md  build.beaver  meson.build
src/: ClassroomManager.vala  Main.vala  ReviewManager.vala
src/main/vala/: Main.vala  ReviewManager.vala
src/main/vala/enums/: FileTypes.vala  QuicksortType.vala
src/main/vala/models/: DataStructures.vala  Review.vala
src/main/vala/utils/: Constraints.vala  GIO.vala  Random.vala  Sorter.vala  Statistic.vala
src/models/: Review.vala  Student.vala
src/utils/: CSVHandler.vala  Sorter.vala
valacompiler/: class-bkp.csv  valacompiler.options  valacompiler.test
